--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
     <h1>FabianOmarGarciaOsorio</h1>
     <h2>About me</h2>
     <p>I AM A STUDENT OF THE INFORMATION TECHNOLOGIES CAREER OF THE CITY OF CULIACAN, SINALOA </p>
-    <p>I HAVE A TECHNICAL CAREER IN MECHANICS, AND ADVANCED ENGLISH COURSES. CURRENTLY I AM STUDYING AT THE TECHNOLOGICAL UNIVERSITY OF CULIACAN.</p>
+    <p>I HAVE A TECHNICAL CAREER IN MECHANICS, AND ADVANCED ENGLISH COURSES. CURRENTLY I AM STUDYING AT THE TECHNOLOGICAL UNIVERSITY OF CULIACAN</p>
     
     <h2>Credentials and Portafolio</h2>
 
